scl/binding/c_api/scl_c_api.h

typedef double scl_real_t;
typedef size_t scl_size_t;
int scl_norm_real(const scl_real_t* data, scl_size_t size, scl_real_t* out_norm);
// --- Element-wise Operations ---

int scl_add_scalar_real(
    const scl_real_t* x,
    scl_size_t size,
    scl_real_t scalar,
    scl_real_t* y
);
int scl_mul_scalar_real(
    const scl_real_t* x,
    scl_size_t size,
    scl_real_t scalar,
    scl_real_t* y
);
int scl_add_arrays_real(
    const scl_real_t* x,
    const scl_real_t* y,
    scl_size_t size,
    scl_real_t* z
);
int scl_mul_arrays_real(
    const scl_real_t* x,
    const scl_real_t* y,
    scl_size_t size,
    scl_real_t* z
);
int scl_clip_real(
    scl_real_t* data,
    scl_size_t size,
    scl_real_t min_val,
    scl_real_t max_val
);