src/scl/_kernel/core.py

    
    result = c_real()
    status = lib.scl_norm_real(data, size, ctypes.byref(result))
    check_error(status, "norm_real")
    return result.value


# =============================================================================
# Element-wise Operations
# =============================================================================

def add_scalar_real(x: Any, size: int, scalar: float, y: Any) -> None:
    """Add scalar to array: y = x + scalar.
    
    Args:
        x: Input array pointer.
        size: Number of elements.
        scalar: Scalar to add.
        y: Output array pointer.
        
    Raises:
        RuntimeError: If operation fails.
    """
    lib = get_lib()
    lib.scl_add_scalar_real.argtypes = [
        ctypes.c_void_p, c_size, c_real, ctypes.c_void_p
    ]
    lib.scl_add_scalar_real.restype = ctypes.c_int
    
    status = lib.scl_add_scalar_real(x, size, scalar, y)
    check_error(status, "add_scalar_real")


def mul_scalar_real(x: Any, size: int, scalar: float, y: Any) -> None:
    """Multiply array by scalar: y = x * scalar.
    
    Args:
        x: Input array pointer.
        size: Number of elements.
        scalar: Scalar to multiply.
        y: Output array pointer.
        
    Raises:
        RuntimeError: If operation fails.
    """
    lib = get_lib()
    lib.scl_mul_scalar_real.argtypes = [
        ctypes.c_void_p, c_size, c_real, ctypes.c_void_p
    ]
    lib.scl_mul_scalar_real.restype = ctypes.c_int
    
    status = lib.scl_mul_scalar_real(x, size, scalar, y)
    check_error(status, "mul_scalar_real")


def add_arrays_real(x: Any, y: Any, size: int, z: Any) -> None:
    """Add two arrays: z = x + y.
    
    Args:
        x: First input array pointer.
        y: Second input array pointer.
        size: Number of elements.
        z: Output array pointer.
        
    Raises:
        RuntimeError: If operation fails.
    """
    lib = get_lib()
    lib.scl_add_arrays_real.argtypes = [
        ctypes.c_void_p, ctypes.c_void_p, c_size, ctypes.c_void_p
    ]
    lib.scl_add_arrays_real.restype = ctypes.c_int
    
    status = lib.scl_add_arrays_real(x, y, size, z)
    check_error(status, "add_arrays_real")


def mul_arrays_real(x: Any, y: Any, size: int, z: Any) -> None:
    """Multiply two arrays element-wise: z = x * y.
    
    Args:
        x: First input array pointer.
        y: Second input array pointer.
        size: Number of elements.
        z: Output array pointer.
        
    Raises:
        RuntimeError: If operation fails.
    """
    lib = get_lib()
    lib.scl_mul_arrays_real.argtypes = [
        ctypes.c_void_p, ctypes.c_void_p, c_size, ctypes.c_void_p
    ]
    lib.scl_mul_arrays_real.restype = ctypes.c_int
    
    status = lib.scl_mul_arrays_real(x, y, size, z)
    check_error(status, "mul_arrays_real")


def clip_real(data: Any, size: int, min_val: float, max_val: float) -> None:
    """Clip array values to [min_val, max_val] (in-place).
    
    Args:
        data: Data array pointer (modified in-place).
        size: Number of elements.
        min_val: Minimum value.
        max_val: Maximum value.
        
    Raises:
        RuntimeError: If operation fails.
    """
    lib = get_lib()
    lib.scl_clip_real.argtypes = [ctypes.c_void_p, c_size, c_real, c_real]
    lib.scl_clip_real.restype = ctypes.c_int
    
    status = lib.scl_clip_real(data, size, min_val, max_val)
    check_error(status, "clip_real")

